# ForgeSkill

./: .forge-skill.toml  .gitignore  README.md  pyproject.toml
forge-skill/: SKILL.md  forge-skill.toml
forge-skill/agents/: openai.yaml
forge-skill/references/: fusion_blueprint.md  materialization_spec.md  synthesis_rubric.md
forge-skill/scripts/: github_scan.py  materialize.py
github-skill-synthesizer/: SKILL.md
github-skill-synthesizer/agents/: openai.yaml
github-skill-synthesizer/references/: synthesis_rubric.md
github-skill-synthesizer/scripts/: github_scan.py  materialize.py
tests/: test_github_scan.py  test_materialize.py
