[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forge-skill"
version = "1.1.0"
description = "Turn top GitHub repositories into evidence-grounded ZCode skills and project scaffolds."
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "tqdm>=4.66",
]
jinja = [
    "jinja2>=3.0",
]
all = [
    "pytest>=8.0",
    "ruff>=0.5",
    "tqdm>=4.66",
    "jinja2>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
